src/app.scss
:root {
    --primary-bg-color: #324;
    --header-bg-color: #333;
    --tip-text-color: #aaa;
    --author-text-color: #aaa;
    --text-color: #fef;
    --tab-border-color: #555;
    --inactive-text-color: #fef;
    --active-text-color: #fff;
    --disclaimer-text-color: #777;
    --disabled-input-color: #444;
}

@media (prefers-color-scheme: light) {
    :root {
        --primary-bg-color: #fff;
        --header-bg-color: #816b91;
        --tip-text-color: #444;
        --text-color: #222;
        --author-text-color: #ccc;
        --tab-border-color: #555;
        --inactive-text-color: #ccc;
        --active-text-color: #222;
        --disclaimer-text-color: #777;
        --disabled-input-color: #c0a1d5;
    }
}

.app {
    background-color: var(--primary-bg-color);
    color: var(--text-color);
    min-height: 100vh;

    header {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background-color: var(--header-bg-color);
        gap: 0;
        padding: 2em 0 0 0;
        text-align: center;

        h1 {
            font-weight: normal;
            letter-spacing: 0.5em;
            margin: 0 auto;
        }

        h2 {
            font-weight: normal;
            letter-spacing: 0.25em;
            font-size: 1.2em;
            font-stretch: condensed;
            margin: 0 auto;

            a {
                color: var(--text-color);
            }
        }

        h3 {
            font-weight: normal;
            letter-spacing: 0.25em;
            font-size: 1em;
            font-stretch: condensed;
            margin: 0.25em auto;
            margin-bottom: 1.5em;
            line-height: 1.2;
            color: var(--author-text-color);
        }

        .tabs {
            display: flex;
            flex-direction: row;
            justify-content: center;
            align-items: center;
            gap: 2em;
            width: 100%;
            max-width: 400px;
            margin-top: 2em;

            button {
                background-color: transparent;
                border: 1px solid var(--tab-border-color);
                border-bottom: none;
                border-radius: 5px 5px 0 0;
                color: var(--inactive-text-color);
                font-size: 1.2em;
                cursor: pointer;
                padding: 0.5em 3em 0.7em 3em;
                font-stretch: condensed;
                letter-spacing: 0.25em;

                &.active {
                    background-color: var(--primary-bg-color);
                    color: var(--active-text-color);
                }
            }
        }
    }

    main {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: center;
        margin: 2em auto;
        text-align: center;
        max-height: 100vh;
        overflow-y: auto;
        overflow-x: hidden;
        line-height: 1.4;

        .hidden {
            display: none !important;
        }

        button {
            width: fit-content;
            min-width: 20rem;
            margin-bottom: 1em;
            font-size: 1.2em;
            padding: 0.5em 1em;
            border-radius: 5px;
            border: 1px solid var(--text-color);
            background-color: transparent;
            color: var(--text-color);
            cursor: pointer;

            &:hover {
                background-color: var(--text-color);
                color: var(--primary-bg-color);
            }
        }

        .config {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            gap: 5px;
            margin: 0 auto 2em auto;
            width: 100%;
            max-width: 400px;

            border: 1px solid var(--tab-border-color);
            border-radius: 5px;
            padding: 1em;

            div {
                width: 100%;
                display: flex;
                flex-direction: row;
                justify-content: space-between;
                align-items: center;
                gap: 1em;

                input {
                    padding: 0.1em 0.5em;
                    font-size: 1.2em;
                }
            }
        }

        .solver {
            .success {
                margin: 3em auto;
                font-size: 1.4em;

                .answer {
                    display: flex;
                    justify-content: center;
                    font-family: monospace;
                    font-size: 1.4em;
                    letter-spacing: 0.5em;
                    color: var(--active-text-color);
                    font-weight: bold;
                    margin: 1rem auto;
                    padding: 0.75rem 1rem;
                    border: 1px solid var(--text-color);
                    border-radius: 5px;
                    width: fit-content;
                    min-width: 20rem;
                }
            }
        }

        .guesses, .guess {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            gap: 1em;
            margin-bottom: 1em;
        }

        .tips {
            color: var(--tip-text-color);
            margin-bottom: 1em;
        }

        .info {
            font-size: 1.1em;
            margin-bottom: 1em;
        }

        .input, .values {
            display: flex;
            flex-direction: row;
            justify-content: center;
            align-items: flex-start;
            gap: 1em;
            margin-bottom: 2em;

            input {
                border: 2px solid var(--text-color);
                border-radius: 5px;
                padding: 5px;
                font-size: 1.5em;
                text-align: center;
                height: 40px;
                width: 40px;
                font-size: 2rem;

                &:disabled {
                    color: var(--text-color);
                    background-color: var(--disabled-input-color);
                }
            }
        }
    }

    .disclaimer {
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 0.8rem;
        position: fixed;
        bottom: 0;
        left: 0;
        right: 0;
        padding: 10px;
        background-color: var(--primary-bg-color);
        color: var(--disclaimer-text-color);
        text-align: center;
        line-height: 1.2;
    }
}

@media (max-width: 600px) {
    .app {
        font-size: 0.8rem;

        header {
            padding: 30px 10px 0 10px;

            .tabs {
                margin: 10px 10px 0 10px;
                gap: 10px;
            }
        }
        main {
            margin: 10px;

            .input, .values {
                gap: 5px;

                input {
                    width: 40px;
                    height: 40px;
                    font-size: 1.2rem;
                }
            }
        }
    }
}

